HelloUltraviolet/Fixtures/RejectedSource/Attributes/PackedLayoutOnEnum/Source/Main.uv
//! Rejected layout attribute specimen for packed layout on a non-record.

#layout(packed)
public enum PackedLayoutEnum {
    Case
}
